--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,24 @@
+.nav-left {
+  float: left !important;
+}
+.nav-left .link {
+  border-right: 1px solid #d2d6de;
+}
+.nav-left .link a {
+  border-right: none !important;
+  border-left: none !important;
+}
+.nav-left .search {
+  padding: 8px;
+  width: 200px;
+}
+
+.nav .user-div {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 15px;
+}
+
 .content-wrapper {
   margin-left: 0;
   background-color: #fcfcfc;
@@ -68,6 +89,9 @@
 
 #post .box-purple {
   border-top-color: #220A37;
+}
+#post .ck-content p {
+  height: 200px;
 }
 
 /*# sourceMappingURL=main.css.map */
