--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -86,6 +86,7 @@
 	    border-radius: 50px;
 	    font-weight: bold;
 	    color:$purple;
+	    margin-bottom: 10px;
 	    &:hover{
 			border: 2px solid $dark-gray;
 			color:$dark-gray;
