--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,6 +71,7 @@
   border-radius: 50px;
   font-weight: bold;
   color: #220A37;
+  margin-bottom: 10px;
 }
 #home .btn-more:hover {
   border: 2px solid #555;
