--- a/public/css/main.css
+++ b/public/css/main.css
@@ -86,6 +86,7 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  word-break: break-all;
   max-height: 110px;
   /* Fallback for non-webkit */
 }
@@ -120,6 +121,7 @@
 }
 #details p {
   font-size: 16px;
+  word-break: break-all;
 }
 #details .info {
   margin-bottom: 10px;
