--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -103,7 +103,7 @@
 	    -webkit-box-orient: vertical;
 	    overflow: hidden;
 	    text-overflow: ellipsis;
-
+        word-break: break-all;
     	max-height: 110px;/* Fallback for non-webkit */
 	}
 	img{
@@ -144,6 +144,7 @@
 	}
 	p{
 		font-size: 16px;
+	    word-break: break-all;
 	}
 	.info{
 	    margin-bottom: 10px;
