--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -192,3 +192,12 @@
 		}
 	}
 }
+
+.pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+    background-color: $purple;
+    border-color: $purple;
+}
+
+.filter-btn{
+	margin-top: 5px;
+}
